--- a/static-website/index.html
+++ b/static-website/index.html
@@ -13,6 +13,6 @@
         <input type="text" id="new-task" placeholder="New task">
         <button id="add-task">Add Task</button>
     </div>
-    <script src="js/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
